# linalg

./: .gitignore  Makefile.am  configure.ac
lib/: f77.c  f77.h  f77blas.h  f77lapack.h  xerbla.c
m4/: ax_check_blas64.m4  ax_check_lapack.m4
src/: blas-private.h  blas.c  blas.h  lapack.c  lapack.h  matrixutil.c  matrixutil.h  sblas.c  sblas.h
